--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 email: function() {
                     var email = 'brksjcksn03@protonmail.com';
                     this.echo();
-                    this.echo(' - Email:       [[!;;;;mailto:' + email + ']brksjcksn03@protonmail.com]');
+                    this.echo(' - email       [[!;;;;mailto:' + email + ']brksjcksn03@protonmail.com]');
                     this.echo();
                 },                
             };
