--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                     this.echo(' - Tetris                           [[!;;;;' + tetris + ']bjaxqq/tetris]');
                     this.echo(' - Hackathon Timer Website          [[!;;;;' + timer + ']jubck/jubck.github.io]');
                     this.echo(' - Quinnipiac: A Campus Quest       [[!;;;;' + rpg + ']fall2023/teams/art]');
-                    this.echo(' - InfiniteSearch                   [[!;;;;' + website + ']bjaxqq/bjaxqq.github.io]');
-                    this.echo(' - This Website                     [[!;;;;' + website + ']bjaxqq/infinitesearch]');
+                    this.echo(' - InfiniteSearch                   [[!;;;;' + website + ']bjaxqq/infinitesearch]');
+                    this.echo(' - This Website                     [[!;;;;' + website + ']bjaxqq/bjaxqq.github.io]');
                     this.echo();
                 },
                 time: function() {
