--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     this.echo(' - socials: My social media/network pages.');
                     this.echo(' - email: My email for business purposes.');
                     this.echo(" - projects: Every project I've worked on.");
-                    this.echo(' - music: Some playlists I listen to frequently');
+                    this.echo(' - music: Some playlists I listen to frequently.');
                     this.echo(' - theme [theme-name]: Change the terminal theme.');
                     this.echo(' - themelist: List all of the available themes.');
                     this.echo(' - time: Displays the current time.');
