--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                     var rpg = 'https://a-r-t.github.io/SER225-Project-Website/semesters/fall2023/teams/art';
                     var website = 'https://github.com/bjaxqq/bjaxqq.github.io';
                     var infinite = 'https://github.com/bjaxqq/infinitesearch';
+                    var workspaceflow = 'https://github.com/bjaxqq/workspaceflow'
                     
                     this.echo();
                     this.echo(' - Tetris                           [[!;;;;' + tetris + ']bjaxqq/tetris]');
@@ -129,6 +130,7 @@
                     this.echo(' - Quinnipiac: A Campus Quest       [[!;;;;' + rpg + ']fall2023/teams/art]');
                     this.echo(' - InfiniteSearch                   [[!;;;;' + infinite + ']bjaxqq/infinitesearch]');
                     this.echo(' - This Website                     [[!;;;;' + website + ']bjaxqq/bjaxqq.github.io]');
+                    this.echo(' - WorkSpaceFlow [WIP]              [[!;;;;' + workspaceflow + ']bjaxqq/workspaceflow]');
                     this.echo();
                 },
                 time: function() {
