--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery.terminal/js/jquery.terminal.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery.terminal/css/jquery.terminal.min.css"/>
     <link rel="stylesheet" href="/themes/default.css">
+    <style>
+        #greetings {
+            color: var(--link-color);
+        }
+    </style>
 </head>
 <template id="greetings">
     ________        ___  ________     ___    ___ ________  ________      
