--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery.terminal/js/jquery.terminal.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery.terminal/css/jquery.terminal.min.css"/>
-    <link rel="stylesheet" href="/themes/default.css">
+    <link rel="stylesheet" href="themes/default.css">
 </head>
 <template id="greetings">
     ________        ___  ________     ___    ___ ________  ________      
