--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <script>
         $(document).ready(function() {
-            var availableThemes = ['default', 'darkmode', 'eightkeight', 'bento', 'camping', 'grape', 'lil-dragon', 'mizu', 'nautilus', 'nord', 'olivia', 'sweden'];
+            var availableThemes = ['default', 'darkmode', 'eightkeight', 'bento', 'camping', 'grape', 'lil-dragon', 'mizu', 'nautilus', 'nord', 'olivia', 'sweden', 'catppuccin'];
 
             var commands = {
                 help: function() {
@@ -77,6 +77,7 @@
                     this.echo(' - nord');
                     this.echo(' - olivia');
                     this.echo(' - sweden');
+                    this.echo(' - catppuccin');
                     this.echo();
                 },
                 music: function() {
