--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
                     var timer = 'https://github.com/jubck/jubck.github.io';
                     var rpg = 'https://a-r-t.github.io/SER225-Project-Website/semesters/fall2023/teams/art';
                     var website = 'https://github.com/bjaxqq/bjaxqq.github.io';
+                    var terminal = 'https://github.com/bjaxqq/terminal';
+                    var quotes = 'https://github.com/bjaxqq/quotes';
                     var infinite = 'https://github.com/bjaxqq/infinitesearch';
                     
                     this.echo();
@@ -127,7 +129,9 @@
                     this.echo(' - Hackathon Timer Website          [[!;;;;' + timer + ']jubck/jubck.github.io]');
                     this.echo(' - Quinnipiac: A Campus Quest       [[!;;;;' + rpg + ']fall2023/teams/art]');
                     this.echo(' - InfiniteSearch                   [[!;;;;' + infinite + ']bjaxqq/infinitesearch]');
-                    this.echo(' - This Website                     [[!;;;;' + website + ']bjaxqq/bjaxqq.github.io]');
+                    this.echo(' - Website Homepage                     [[!;;;;' + website + ']bjaxqq/bjaxqq.github.io]');
+                    this.echo(' - This Website                     [[!;;;;' + website + ']bjaxqq/terminal]');
+                    this.echo(' - Stoic Quote Generator                     [[!;;;;' + website + ']bjaxqq/quotes]');
                     this.echo();
                 },
                 time: function() {
