--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                     var terminal = 'https://github.com/bjaxqq/terminal';
                     var quotes = 'https://github.com/bjaxqq/quotes';
                     var infinite = 'https://github.com/bjaxqq/infinitesearch';
+                    var quinnipiac = 'https://github.com/bajackson1/QuinnipiacTracker';
                     
                     this.echo();
                     this.echo(' - Tetris                           [[!;;;;' + tetris + ']bjaxqq/tetris]');
@@ -128,8 +129,9 @@
                     this.echo(' - Quinnipiac: A Campus Quest       [[!;;;;' + rpg + ']fall2023/teams/art]');
                     this.echo(' - InfiniteSearch                   [[!;;;;' + infinite + ']bjaxqq/infinitesearch]');
                     this.echo(' - Website Homepage                 [[!;;;;' + website + ']bjaxqq/bjaxqq.github.io]');
-                    this.echo(' - This Website                     [[!;;;;' + website + ']bjaxqq/terminal]');
-                    this.echo(' - Stoic Quote Generator            [[!;;;;' + website + ']bjaxqq/quotes]');
+                    this.echo(' - This Website                     [[!;;;;' + terminal + ']bjaxqq/terminal]');
+                    this.echo(' - Stoic Quote Generator            [[!;;;;' + quotes + ']bjaxqq/quotes]');
+                    this.echo(' - Quinnipiac Tracker            [[!;;;;' + quinnipiac + ']bajackson1/QuinnipiacTracker]');
                     this.echo();
                 },
                 time: function() {
