--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="shortcut icon" href="/.github/assets/navi.ico" type="image/x-icon">
+  <link rel="shortcut icon" href=".github/assets/navi.ico" type="image/x-icon">
 </head>
 <body>
   <div class="status-bar">
