--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="pdf-page-header">about.pdf - Page 1</div>
           <div class="pdf-page-content">
             <div class="profile-header">
-              <img src="/.github/assets/1718268326617.jpg" alt="Brooks" class="profile-pic">
+              <img src=".github/assets/1718268326617.jpg" alt="Brooks" class="profile-pic">
               <h1>Hi, I'm Brooks!</h1>
             </div>
             <div class="pdf-text">
