--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="shortcut icon" href=".github/assets/navi.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="images/navi.ico" type="image/x-icon">
 </head>
 <body>
   <div class="status-bar">
@@ -39,7 +39,7 @@
           <div class="pdf-page-header">about.pdf - Page 1</div>
           <div class="pdf-page-content">
             <div class="profile-header">
-              <img src=".github/assets/1718268326617.jpg" alt="Brooks" class="profile-pic">
+              <img src="images/1718268326617.jpg" alt="Brooks" class="profile-pic">
               <h1>Hi, I'm Brooks!</h1>
             </div>
             <div class="pdf-text">
